k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-svc
spec:
  type: LoadBalancer
  selector:
    app: netflix
  ports:
    - port: 80
      targetPort: 3000
