k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress-v2
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      # FRONTEND
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-svc
            port:
              number: 80

      # BACKEND
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: netflix-backend
            port:
              number: 5000
